--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,9 @@ body{
   
 }
 .food-container:hover .food-image{
-  box-shadow:1px 1px 5px 5px #ed4208;
+  box-shadow:1px 1px 2px 2px rgb(233, 83, 83);
+  width:270px;
+  height:270px;
 }
 
 
@@ -292,6 +294,17 @@ body{
   .center{
     display:flex;
     justify-content: center;
+  }
+
+  .checkout{
+    border:none;
+    border-radius:20px;
+    padding:10px 20px;
+    background-color: green;
+  }
+  .checkout:hover{
+    cursor:pointer;
+    box-shadow:1px 1px 1px 1px rgb(105, 228, 89); ;
   }
 
   /* profile css */
